--- a/frontend/src/components/Footer/Index.module.scss
+++ b/frontend/src/components/Footer/Index.module.scss
@@ -10,6 +10,7 @@
   backdrop-filter: blur(5px);
   -webkit-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.35);
   box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.35);
+  z-index: 18;
 
   h6 {
     margin-left: 0.3rem;
